--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "libe-apps-template",
   "version": "0.2.3",
   "private": true,
-  "homepage": "https://www.liberation.fr/apps/les-dossiers-du-fil-vert",
+  "homepage": "/apps/les-dossiers-du-fil-vert",
   "dependencies": {
     "libe-components": "^1.2.0",
     "libe-utils": "^1.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.4.3",
     "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
